@@ -20,8 +20,9 @@ else
 DEB_BUILD_MAINT_OPTIONS = hardening=+all
 endif
 export DEB_BUILD_MAINT_OPTIONS
+
 DPKG_EXPORT_BUILDFLAGS=1
--include /usr/share/dpkg/buildflags.mk
+include /usr/share/dpkg/buildflags.mk
 CFLAGS += $(CPPFLAGS)
 CXXFLAGS += $(CPPFLAGS)
 
@@ -30,42 +31,21 @@ CXXFLAGS += $(CPPFLAGS)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
-# Synergy needs libcrypto++.  We can attempt to use packaged libcrypto++,
-# or the embedded zip file of the libcrypto++ source.  To use the zip,
-# remove the Build-Depends on libcrypto++-dev, add one for unzip, and
-# uncomment the following line.
-#USE_CRYPTOPP_DIR = tools/cryptopp
-
 # Run the test suite unless explicitly requested not to.
 ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 TEST_TARGET = test
 endif
 
-CFLAGS += -Wall -g
-CXXFLAGS += -Wall -g
-LDFLAGS += -Wl,-z,defs
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-CXXFLAGS = $(CFLAGS)
 
 builddir:
 	mkdir builddir
 
-config.h: CMakeLists.txt builddir $(USE_CRYPTOPP_DIR)
+config.h: CMakeLists.txt builddir
 	dh_testdir
 	(cd builddir && cmake ..)
 
 src/gui/Makefile:
 	(cd src/gui && qmake gui.pro "CONFIG+=release" "QMAKE_CFLAGS_RELEASE+=$(CFLAGS)" "QMAKE_CXXFLAGS_RELEASE+=$(CXXFLAGS)" "QMAKE_LFLAGS_RELEASE+=$(LDFLAGS)" -r)
-
-tools/cryptopp: tools/cryptopp562.zip
-	mkdir -p tools/cryptopp
-	cd tools/cryptopp && unzip -a ../cryptopp562.zip
 
 # Man page builders.  These are better than the upstream man pages
 # in doc.
@@ -86,10 +66,17 @@ bin/synergy: builddir src/gui/Makefile
 	dh_testdir
 	(cd src/gui && $(MAKE))
 
+src/test/guitests/Makefile:
+	(cd src/test/guitests && qmake guitests.pro "CONFIG+=release" "QMAKE_CFLAGS_RELEASE+=$(CFLAGS)" "QMAKE_CXXFLAGS_RELEASE+=$(CXXFLAGS)" "QMAKE_LFLAGS_RELEASE+=$(LDFLAGS)" -r)
+
+bin/guitests: bin/synergy builddir src/test/guitests/Makefile
+	dh_testdir
+	(cd src/test/guitests && $(MAKE))
+
 build: build-arch build-indep
 build-arch: build-stamp
 build-indep: build-stamp
-build-stamp: bin/unittests bin/synergy synergy.1 synergys.1 synergyc.1 synergyd.1
+build-stamp: bin/unittests bin/synergy synergy.1 synergys.1 synergyc.1 synergyd.1 syntool.1
 	touch build-stamp
 
 clean:
@@ -97,22 +84,24 @@ clean:
 	dh_testroot
 
 	rm -f build-stamp 
-	rm -rf builddir bin lib
-	rm -f synergy.1 synergys.1 synergyc.1 synergyd.1 config.h
+	rm -f debian/substvars
+	rm -rf build builddir bin lib
+	rm -f synergy.1 synergys.1 synergyc.1 synergyd.1 syntool.1 config.h
 
 	find . -name \*.pyc -delete
-
+	find . -iwholename '*cmake*' -not -name CMakeLists.txt -delete
 	$(MAKE) -C src/gui distclean || true
+	$(MAKE) -C src/test/guitests distclean || true
+	find . -type f -name Makefile -delete
+
 	rm -rf src/gui/tmp
-
-	rm -rf tools/cryptopp
-
+	rm -f NetworkTests.mock
 	dh_clean 
 
-test: build-stamp
+test: build-stamp bin/guitests
 	bin/unittests --gtest_color=no
-	# Seems to segfault often, so don't fail
-	bin/integtests --gtest_color=no || true
+	bin/integtests --gtest_color=no --gtest_filter=-XWindowsKeyStateTests.*:CXWindowsScreenTests.*
+	bin/guitests
 
 install: build
 	dh_testdir
@@ -141,9 +130,9 @@ binary-arch: build install $(TEST_TARGET)
 #	dh_installinit
 #	dh_installcron
 #	dh_installinfo
-	dh_installman synergys.1 synergyc.1 synergyd.1 synergy.1
+	dh_installman
 	dh_link
-	dh_strip
+	dh_strip --dbg-package=synergy-dbg
 	dh_compress
 	dh_fixperms
 #	dh_perl
@@ -158,3 +147,7 @@ binary-arch: build install $(TEST_TARGET)
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install 
+
+# Repack upstream tarball, excluded files are in the Files-Excluded paragraph of debian/copyright
+get-orig-source: 
+	uscan --force-download --rename --repack --download-current-version --destdir=.
