@@ -1,0 +1,2 @@
+# Upstream has made an exception in their LICENSE file for linking with GPL code
+synergy: possible-gpl-code-linked-with-openssl
