@@ -14,6 +14,8 @@ synergy (1.8.7-stable+dfsg.1-1) unstable; urgency=medium
     account.
   * Added new_ssl patch to build against newer OpenSSL in Debian.
   * Added syntool binary and manual page.
+  * lintian override for possible-gpl-code-linked-with-openssl due to
+    upstream exception.
 
  -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Fri, 20 Jan 2017 16:21:56 -0600
 
